cabal-version: >= 1.2
name:                git-fastexport
version:             0.0
synopsis:            git fastexport stream filter
description:         Filter for git fastexport
category:            Development
license:             BSD3
license-file:        LICENSE
author:              Zohar Kelrich
maintainer:          lumimies@gmail.com
build-type:          Simple

executable git-fastexport-filter
    main-is:             Git-fastexport-filter.hs

library
    build-depends:
        base,
        attoparsec >= 0.10.2,
        bytestring-trie >= 0.2.3,
        bytestring >= 0.9.1,
        blaze-builder,
        conduit >= 0.5,
        attoparsec-conduit,
        blaze-builder-conduit,
        blaze-textual
    exposed-modules:
        Git.FastExport, 
        Git.FastExport.Filter,
        Git.FastExport.BShow,
        Git.FastExport.AuthorFilter,
        Git.FastExport.Types,
        Git.FastExport.Conduit