cabal-version: >= 1.8
name:                git-fastexport
version:             0.1
synopsis:            git fastexport stream filter
description:         Filter for git fastexport
category:            Development
license:             BSD3
license-file:        LICENSE
author:              Zohar Kelrich
maintainer:          lumimies@gmail.com
build-type:          Simple

source-repository head
    type: git

executable git-fastexport-filter
    main-is:             Git-fastexport-filter.hs
    hs-source-dirs:      src-main
    build-depends:
        base,
        bytestring >= 0.9.1,
        conduit >= 0.5,
        filepath >= 1.3.0.0,
        cmdtheline >= 0.2,
        git-fastexport

library
    hs-source-dirs: src
    build-depends:
        base,
        void,
        attoparsec >= 0.10.2,
        transformers-base >= 0.4.1,
        transformers >= 0.2.2 && < 0.4,
        bytestring-trie >= 0.2.3,
        bytestring >= 0.9.1,
        blaze-builder,
        conduit >= 0.5,
        containers,
        attoparsec-conduit,
        blaze-builder-conduit,
        blaze-textual
    exposed-modules:
        Git.FastExport, 
        Git.FastExport.Filter,
        Git.FastExport.BShow,
        Git.FastExport.AuthorFilter,
        Git.FastExport.Types,
        Git.FastExport.Conduit
    other-modules:
        Git.FastExport.Parser
